deploy: 3c88e9e9b473b0fa7059e9a3cdfffc7a9eb543e0

--- a/404.html
+++ b/404.html
@@ -29,6 +29,9 @@
         border-radius: 2px;
         background-color: #f66;
       }
+      p {
+        word-break: break-all;
+      }
       .gap {
         display: inline-block;
         width: 10px;
@@ -112,6 +115,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/bruce/umi.e34cf67d.js"></script>
+    <script src="/bruce/umi.d40bc32e.js"></script>
   </body>
 </html>
