--- a/index.html
+++ b/index.html
@@ -98,16 +98,19 @@
       window.routerBase = "/bruce";
     </script>
     <script>
-      //! umi version: 3.5.34
+      //! umi version: 3.5.35
     </script>
     <script>
       !(function () {
-        var e = localStorage.getItem("dumi:prefers-color"),
-          t = window.matchMedia("(prefers-color-scheme: dark)").matches,
-          r = ["light", "dark", "auto"];
+        var e =
+            navigator.cookieEnabled && void 0 !== window.localStorage
+              ? localStorage.getItem("dumi:prefers-color")
+              : "auto",
+          o = window.matchMedia("(prefers-color-scheme: dark)").matches,
+          t = ["light", "dark", "auto"];
         document.documentElement.setAttribute(
           "data-prefers-color",
-          e === r[2] ? (t ? r[1] : r[0]) : r.indexOf(e) > -1 ? e : r[0]
+          e === t[2] ? (o ? t[1] : t[0]) : t.indexOf(e) > -1 ? e : t[0]
         );
       })();
     </script>
@@ -115,6 +118,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/bruce/umi.6c2d65c2.js"></script>
+    <script src="/bruce/umi.d4ef79da.js"></script>
   </body>
 </html>
